tests/ui/append_dummy.stderr
error: append_dummy test
 --> tests/ui/append_dummy.rs:9:15
  |
9 | append_dummy!(need_default);
  |               ^^^^^^^^^^^^
